classDiagram
    %% MASTER DATA
    class prodi {
        +id : BIGINT
        +kode_prodi : VARCHAR(20)
        +nama_prodi : VARCHAR(255)
        +nama_singkat : VARCHAR(100)
        +dosenKepala()
        +dosen()
        +matakuliah()
    }
    
    class users {
        +id : BIGINT
        +name : VARCHAR(255)
        +email : VARCHAR(255)
        +username : VARCHAR(255)
        -password : VARCHAR(255)
        +role : ENUM
        +prodi_id : BIGINT
        +dosen()
        +prodi()
        +reminders()
        +isGKM() bool
        +isGJM() bool
    }
    
    class dosen {
        +dosen_id : BIGINT
        +nip : VARCHAR(50)
        +nidn : VARCHAR(50)
        +nama : VARCHAR(255)
        +email : VARCHAR(255)
        +prodi_id : BIGINT
        +user()
        +prodi()
        +rps()
        +materi()
    }
    
    %% AKADEMIK
    class matakuliah {
        +id : BIGINT
        +prodi_id : BIGINT
        +kode_mk : VARCHAR(20)
        +nama_mk : VARCHAR(255)
        +sks : INT
        +semester : INT
        +status : ENUM
        +prodi()
        +dosen()
        +rps()
    }
    
    class periode_akademik {
        +id : BIGINT
        +tahun_ajaran : VARCHAR(20)
        +semester : ENUM
        +start_date : DATE
        +end_date : DATE
        +is_active : TINYINT
        +getActive()
        +scopeActive()
    }
    
    %% RPS & MATERI
    class rps {
        +id : BIGINT
        +matakuliah_id : BIGINT
        +periode_id : BIGINT
        +dosen_id : BIGINT
        +file_rps : VARCHAR(500)
        +status_upload_rps : ENUM
        +matakuliah()
        +dosen()
        +monitoring()
    }
    
    class materi {
        +id : BIGINT
        +matakuliah_id : BIGINT
        +periode_id : BIGINT
        +dosen_id : BIGINT
        +judul_materi : VARCHAR(255)
        +file_materi : VARCHAR(500)
        +status_upload_materi : ENUM
        +matakuliah()
        +dosen()
    }
    
    %% KUISIONER
    class kuisioner {
        +id : BIGINT
        +periode_id : BIGINT
        +matakuliah_id : BIGINT
        +dosen_id : BIGINT
        +judul : VARCHAR(255)
        +periode_kuesioner : ENUM
        +pertanyaan()
        +jawaban()
    }
    
    class pertanyaan_kuisioner {
        +id : BIGINT
        +kuisioner_id : BIGINT
        +pertanyaan : TEXT
        +pilihan_jawaban : ENUM
        +jumlah_responden : INT
        +kuisioner()
    }
    
    %% REMINDER & LAPORAN
    class reminder {
        +id : BIGINT
        +user_id : BIGINT
        +dosen_id : BIGINT
        +tipe_reminder : ENUM
        +status_pengiriman : ENUM
        +userPembuat()
        +userPenerima()
    }
    
    class template_laporan {
        +id : BIGINT
        +nama_template : VARCHAR(255)
        +jenis_template : ENUM
        +laporanBulanan()
        +scopeActive()
    }
    
    class laporan {
        +id : BIGINT
        +user_id : BIGINT
        +template_id : BIGINT
        +jenis_laporan : ENUM
        +judul_laporan : VARCHAR(255)
        +user()
        +template()
        +prodi()
    }
    
    class kirim_laporan {
        +id : BIGINT
        +user_id : BIGINT
        +penerima : TEXT
        +judul : VARCHAR(255)
        +user()
    }
    
    %% RELASI
    users "1" --> "*" dosen : memiliki
    users "*" --> "1" prodi : milik
    dosen "*" --> "1" prodi : milik
    
    matakuliah "*" --> "1" prodi : ditawarkan
    
    rps "*" --> "1" matakuliah : untuk
    rps "*" --> "1" periode_akademik : berlaku
    rps "*" --> "1" dosen : dibuat
    
    materi "*" --> "1" matakuliah : milik
    materi "*" --> "1" periode_akademik : berlaku
    materi "*" --> "1" dosen : diunggah
    
    kuisioner "*" --> "1" periode_akademik : periode
    kuisioner "*" --> "1" matakuliah : evaluasi
    kuisioner "*" --> "1" dosen : untuk
    kuisioner "1" --> "1" pertanyaan_kuisioner : referensi
    pertanyaan_kuisioner "*" --> "1" kuisioner : bagian
    
    reminder "*" --> "1" users : kirim
    reminder "*" ..> "0..1" dosen : tentang
    reminder "*" ..> "0..1" matakuliah : tentang
    reminder "*" ..> "0..1" rps : tentang
    reminder "*" ..> "0..1" materi : tentang
    
    laporan "*" --> "1" users : dibuat
    laporan "*" --> "1" template_laporan : pakai
    laporan "*" ..> "0..1" prodi : untuk
    laporan "*" ..> "0..1" periode_akademik : pada
    laporan "*" ..> "0..1" dosen : tentang
    
    kirim_laporan "*" --> "1" users : kirim
